--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
       <meta charset="UTF-8">
       <script language="javascript" type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.min.js"></script>
-      
+      <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/addons/p5.dom.min.js"></script>
       <script language="javascript" type="text/javascript" src="sketch.js"></script>
       <script language="javascript" type="text/javascript" src="bird.js"></script>
       <script language="javascript" type="text/javascript" src="pipe.js"></script>
@@ -11,7 +11,12 @@
       <script language="javascript" type="text/javascript" src="nn.js"></script>
       <script language="javascript" type="text/javascript" src="ga.js"></script>
     </head>
-    
     <body>
+      <div id="canvascontainer"></div>
+        <p>
+          speed: <input id="speedSlider" type="range" min="1" max="100" value="1"> <span id="speed">1</span>
+          <br/> high score: <span id="hs">0</span>
+          <br/> all time high score: <span id="ahs">0</span>
+        </p>
     </body>
 </html>
