--- a/tensorflowflappy/index.html
+++ b/tensorflowflappy/index.html
@@ -7,9 +7,9 @@
       <script language="javascript" type="text/javascript" src="sketch.js"></script>
       <script language="javascript" type="text/javascript" src="bird.js"></script>
       <script language="javascript" type="text/javascript" src="pipe.js"></script>
-      <script language="javascript" type="text/javascript" src="matrix.js"></script>
-      <script language="javascript" type="text/javascript" src="nn.js"></script>
       <script language="javascript" type="text/javascript" src="ga.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.4/dist/tf.min.js"></script>
+      <script language="javascript" type="text/javascript" src="nn.js"></script>
     </head>
     <body>
       <div id="canvascontainer"></div>
