--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
       <meta charset="UTF-8">
       <script language="javascript" type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.min.js"></script>
-      <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/addons/p5.dom.min.js"></script>
+      <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
+      <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.js"></script>
       <script language="javascript" type="text/javascript" src="sketch.js"></script>
       <script language="javascript" type="text/javascript" src="bird.js"></script>
       <script language="javascript" type="text/javascript" src="pipe.js"></script>
@@ -18,5 +19,7 @@
           <br/> high score: <span id="hs">0</span>
           <br/> all time high score: <span id="ahs">0</span>
         </p>
+        <p style="position: relative; left:990px; top:-550px">Population</p>
+        
     </body>
 </html>
