--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
       <div id="canvascontainer"></div>
         <p>
-          speed: <input id="speedSlider" type="range" min="1" max="100" value="1"> <span id="speed">1</span>
+          spleed: <input id="speedSlider" type="range" min="1" max="100" value="1"> <span id="speed">1</span>
           <br/> high score: <span id="hs">0</span>
           <br/> all time high score: <span id="ahs">0</span>
         </p>
