Updated position of Population

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <body>
       <div id="canvascontainer"></div>
         <p>
-          speed: <input id="speedSlider" type="range" min="1" max="100" value="1"> <span id="speed">1</span>
-          <br/> high score: <span id="hs">0</span>
-          <br/> all time high score: <span id="ahs">0</span>
+          Training Speed: <input id="speedSlider" type="range" min="1" max="100" value="1"> <span id="speed">1</span>
+          <br/> High score: <span id="hs">0</span>
+          <br/> All time high score: <span id="ahs">0</span>
         </p>
-        <p style="position: relative; left:990px; top:-550px">Population</p>
+        <p style="position: relative; left:970; top:-550">Population Size</p>
         
     </body>
 </html>
